--- a/oop/ch3.ipynb
+++ b/oop/ch3.ipynb
@@ -2,99 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Property:\n",
     "    \n",
     "    def __init__(self, square_feet='', beds='',\n",
-    "                baths)"
+    "                baths='', **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.square_feet = square_feet\n",
+    "        self.num_beds = beds\n",
+    "        self.num_baths = baths\n",
+    "        \n",
+    "    def display(self):\n",
+    "        print('PROPERTY DETAILS:\\n')\n",
+    "        print(' square footage: {}\\n'.format(self.square_feet),\n",
+    "              'bedrooms: {}\\n'.format(self.num_beds),\n",
+    "              'bathrooms: {}\\n'.format(self.num_baths))\n",
+    "        \n",
+    "    def prompt_init():\n",
+    "        return dict(square_feet = input('Enter the number of square feet: '),\n",
+    "                   beds = input('Enter the number of beds: '),\n",
+    "                   baths = input('Enter the number of baths: '))\n",
+    "    prompt_init = staticmethod(prompt_init)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_kwargs(**kwargs):\n",
-    "    for k, v in kwargs.items():\n",
-    "        print('{} is {}'.format(k, v))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my_name is christopher\n",
-      "your_name is Tim\n",
-      "name1 is John\n",
-      "name2 is ben\n",
-      "name3 is sammy\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_kwargs(\n",
-    "            my_name='christopher',\n",
-    "            your_name='Tim',\n",
-    "            name1='John',\n",
-    "            name2='ben',\n",
-    "            name3='sammy'\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Rectangle:\n",
-    "    def __init__(self, length, width):\n",
-    "        self.length = length\n",
-    "        self.width = width\n",
+    "class Apartment(Property):\n",
     "\n",
-    "    def area(self):\n",
-    "        return self.length * self.width\n",
-    "\n",
-    "    def perimeter(self):\n",
-    "        return 2 * self.length + 2 * self.width"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Square(Rectangle):\n",
-    "    def __init__(self, length):\n",
-    "        super().__init__(length, length)\n",
-    "\n",
-    "class Cube(Square):\n",
-    "    def surface_area(self):\n",
-    "        face_area = super().area()\n",
-    "        return face_area * 6\n",
-    "\n",
-    "    def volume(self):\n",
-    "        face_area = super().area()\n",
-    "        return face_area * self.length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cb = Cube(3)"
+    "    valid_balconies = ('yes', 'no', 'solarium')\n",
+    "    valid_laundries = ('coin', 'ensuite', 'none')\n",
+    "    \n",
+    "    def __init__(self, balcony='', laundry='', **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.balcony = balcony\n",
+    "        self.laundry = laundry\n",
+    "        \n",
+    "    def display(self):\n",
+    "        super().display()\n",
+    "        print('APARTMENT DETAILS')\n",
+    "        print('has balcony: %s' % self.balcony,\n",
+    "            'laundry: %s' % self.laundry)\n",
+    "        \n",
+    "        parent_init = Property.prompt_init"
    ]
   },
   {
@@ -153,32 +109,6 @@
     "        return triangle_area * 4 + base_area\n",
     "    \n",
     "Right_Pyramid.__mro__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Right_Pyramid' object has no attribute 'height'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-59-9500bece84d7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mtest_pyramid\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marea\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mtest_pyramid\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marea_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-57-273d8fb975b9>\u001b[0m in \u001b[0;36marea_2\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0marea_2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mbase_area\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marea\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m         \u001b[0mtriangle_area\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtri_area\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mtriangle_area\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;36m4\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbase_area\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-56-728dea894c2d>\u001b[0m in \u001b[0;36mtri_area\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtri_area\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[1;36m0.5\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbase\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mheight\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Right_Pyramid' object has no attribute 'height'"
-     ]
-    }
-   ],
-   "source": [
-    "test_pyramid = Right_Pyramid(2, 4)\n",
-    "\n",
-    "test_pyramid.area()\n",
-    "test_pyramid.area_2()"
    ]
   }
  ],
