--- a/oop/ch3.ipynb
+++ b/oop/ch3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,24 @@
     "              'bedrooms: {}\\n'.format(self.num_beds),\n",
     "              'bathrooms: {}\\n'.format(self.num_baths))\n",
     "        \n",
+    "    def get_valid_input(input_str, valid_options):\n",
+    "        input_str += ' ({})'.format(', '.join(valid_options))\n",
+    "        response = input(input_str)\n",
+    "        while response.lower() not in valid_options:\n",
+    "            response = input(input_str)\n",
+    "        return response\n",
+    "        \n",
     "    def prompt_init():\n",
     "        return dict(square_feet = input('Enter the number of square feet: '),\n",
     "                   beds = input('Enter the number of beds: '),\n",
     "                   baths = input('Enter the number of baths: '))\n",
-    "    prompt_init = staticmethod(prompt_init)"
+    "    prompt_init = staticmethod(prompt_init)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,72 +51,85 @@
     "        super().__init__(**kwargs)\n",
     "        self.balcony = balcony\n",
     "        self.laundry = laundry\n",
-    "        \n",
-    "    def display(self):\n",
-    "        super().display()\n",
-    "        print('APARTMENT DETAILS')\n",
-    "        print('has balcony: %s' % self.balcony,\n",
-    "            'laundry: %s' % self.laundry)\n",
-    "        \n",
-    "        parent_init = Property.prompt_init"
+    "    \n",
+    "    def prompt_init():\n",
+    "        parent_init = Property.prompt_init()\n",
+    "        laundry = get_valid_input('What laundry facilites does the property have?',\n",
+    "                                 Apartment.valid_laundries)\n",
+    "        balcony = get_valid_input('Does the property have a balcony?',\n",
+    "                                 Apartment.valid_balconies)\n",
+    "        parent_init.update({\n",
+    "            'laundry': laundry,\n",
+    "            'balcony': balcony\n",
+    "        })\n",
+    "        return parent_init\n",
+    "    prompt_init = staticmethod(prompt_init)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Triangle:\n",
+    "class House(Property):\n",
     "    \n",
-    "    def __init__(self, base, height):\n",
-    "        self.base = base\n",
-    "        self.height = height\n",
-    "        super().__init__()\n",
+    "    valid_garge = ('attached', 'detached', 'none')\n",
+    "    valid_fence = ('yes', 'no')\n",
+    "    \n",
+    "    def __init__(self, stories= '', garge='', fence='', **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.stories = stories\n",
+    "        self.garge = garge\n",
+    "        self.fence = fence\n",
     "        \n",
-    "    def tri_area(self):\n",
-    "        return 0.5 * self.base * self.height"
+    "    def display(self):\n",
+    "        super().display()\n",
+    "        print('HOUSE DETAILS \\n')\n",
+    "        print('# of stories: {}\\n'.format(self.stories),\n",
+    "             'garge: {}\\n'.format(self.garge),\n",
+    "             'fence: {}\\n'.format(self.fence))\n",
+    "    \n",
+    "    def prompt_init():\n",
+    "        parent_init = Property.prompt_init()\n",
+    "        fenced = get_valid_input('Is the yard fenced?', House.valid_fence)\n",
+    "        garge = get_valid_input('Does the house have a garge?', House.valid_garge)\n",
+    "        stories = input('How many stories?')\n",
+    "        parent_init.update({\n",
+    "            'fenced': fence,\n",
+    "            'garge': garge,\n",
+    "            'stories': stories\n",
+    "        })\n",
+    "        return parent_init\n",
+    "    prompt_init = staticmethod(prompt_init)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(__main__.Right_Pyramid,\n",
-       " __main__.Square,\n",
-       " __main__.Rectangle,\n",
-       " __main__.Triangle,\n",
-       " object)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class Right_Pyramid(Square, Triangle):\n",
+    "class Purchase:\n",
     "    \n",
-    "    def __init__(self, base, slant_height):\n",
-    "        self.base = base\n",
-    "        self.slant_height = slant_height\n",
-    "        super().__init__(self.base)\n",
+    "    def __init__(self, price='', taxes='', **kwargs):\n",
+    "        super.__init__(**kwargs)\n",
+    "        self.price = price\n",
+    "        self.taxes = taxes\n",
     "        \n",
-    "    def area(self):\n",
-    "        base_area = super().area()\n",
-    "        perimeter = super().perimeter()\n",
-    "        return 0.5 * perimeter * self.slant_height + base_area\n",
-    "    \n",
-    "    def area_2(self):\n",
-    "        base_area = super().area()\n",
-    "        triangle_area = super().tri_area()\n",
-    "        return triangle_area * 4 + base_area\n",
-    "    \n",
-    "Right_Pyramid.__mro__"
+    "    def display(self):\n",
+    "        super().display()\n",
+    "        print('PURCHASE DETAILS')\n",
+    "        print('selling price: {}\\n'.format(self.price),\n",
+    "             'estimated taxes: {}\\n'.format(self.taxes))\n",
+    "        \n",
+    "    def prompt_init():\n",
+    "        return dict(\n",
+    "            price = input('what is the selling price? '),\n",
+    "            taxes = inpute('what is the estimated taxes? '))\n",
+    "    prompt_init = staticmethod(prompt_init)\n"
    ]
   }
  ],
