working house rental oop

--- a/oop/ch3.ipynb
+++ b/oop/ch3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,9 +80,9 @@
     "    \n",
     "    def __init__(self, stories= '', garge='', fence='', **kwargs):\n",
     "        super().__init__(**kwargs)\n",
-    "        self.stories = stories\n",
     "        self.garge = garge\n",
     "        self.fence = fence\n",
+    "        self.stories = stories\n",
     "        \n",
     "    def display(self):\n",
     "        super().display()\n",
@@ -93,11 +93,11 @@
     "    \n",
     "    def prompt_init():\n",
     "        parent_init = Property.prompt_init()\n",
-    "        fenced = get_valid_input('Is the yard fenced?', House.valid_fence)\n",
-    "        garge = get_valid_input('Does the house have a garge?', House.valid_garge)\n",
+    "        fence = get_valid_input('Is the yard fenced? ', House.valid_fence)\n",
+    "        garge = get_valid_input('Does the house have a garge? ', House.valid_garge)\n",
     "        stories = input('How many stories?')\n",
     "        parent_init.update({\n",
-    "            'fenced': fence,\n",
+    "            'fence': fence,\n",
     "            'garge': garge,\n",
     "            'stories': stories\n",
     "        })\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +130,69 @@
     "            price = input('what is the selling price? '),\n",
     "            taxes = inpute('what is the estimated taxes? '))\n",
     "    prompt_init = staticmethod(prompt_init)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Rental:\n",
+    "    \n",
+    "    def __init__(self, furnished='', utilities='', rent='', **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.furnished = furnished\n",
+    "        self.utilities = utilities\n",
+    "        self.rent = rent\n",
+    "    \n",
+    "    def display(self):\n",
+    "        super().display()\n",
+    "        print('RENTAL DETIALS')\n",
+    "        print('rent: {}'.format(self.rent),\n",
+    "             'estimated utilities: {}'.format(self.utilities),\n",
+    "             'furnished: {}'.format(self.furnishd))\n",
+    "        \n",
+    "    def prompt_init():\n",
+    "        return dict(\n",
+    "            rent = input('What is the monthly rent? '),\n",
+    "            utilities = input('What is the estimated utilities cost? '),\n",
+    "            furnished = get_valid_input('is the property furnished?', ('yes', 'no')))\n",
+    "    prompt_init = staticmethod(prompt_init)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class House_Rental(Rental, House):\n",
+    "    \n",
+    "    def prompt_init():\n",
+    "        init = House.prompt_init()\n",
+    "        init.update(Rental.prompt_init())\n",
+    "        return init\n",
+    "    prompt_init = staticmethod(prompt_init)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test1 = House_Rental.prompt_init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "house = House_Rental(**test1)"
    ]
   }
  ],
